k8s/server-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployments
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: server
  template:
    metadata: 
      labels: 
        component: server
    spec:
      containers:
        - name: server
          image: midhunsudhakar/multi-server
          ports:
              - containerPort: 5000
